public/style.css
:root

/** Based on TailwindCSS defaults */
  {
  --spacing: 0.25rem;
  --line-height: 1.5;

  --font-family: ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  --font-size-title: 4rem;
  --font-size-subtitle: 2rem;
  --font-size-body: 1rem;
  --font-weight-bold: 700;

  --color-background: #FDF6E3;
  --color-secondary: #cac5b6;
  --color-theme: #2AA198;
}

body {
  font-family: var(--font-family);
  line-height: var(--line-height);
  font-size: var(--font-size-body);
  background-color: var(--color-background);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a {
  color: var(--color-theme);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

hr {
  border: none;
  border-top: 1px solid var(--color-secondary);
}

.page-container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.content {
  width: 100%;

  margin-inline: auto;
  padding-inline: calc(var(--spacing) * 4);
  padding-block: calc(var(--spacing) * 8);

  display: flex;
  flex-direction: column;
  gap: calc(var(--spacing) * 4);

  /** Using standardized breakpoints. Taken from TailwindCSS */
  @media (width >=40rem) {
    max-width: 40rem;
  }

  @media (width >=48rem) {
    max-width: 48rem;
  }

  @media (width >=64rem) {
    max-width: 64rem;
  }

  @media (width >=80rem) {
    max-width: 80rem;
  }

  @media (width >=96rem) {
    max-width: 96rem;
  }
}

.icon-link {
  display: inline-flex;
  align-items: center;
  gap: calc(var(--spacing) * 2);
}

.icon-link svg {
  width: calc(var(--spacing) * 6);
  height: calc(var(--spacing) * 6);
  vertical-align: middle;
}

.title {
  font-size: var(--font-size-title);
  font-weight: var(--font-weight-bold);
}

.subtitle {
  font-size: var(--font-size-subtitle);
  font-weight: var(--font-weight-bold);
}

.lessons-list {
  font-size: var(--font-size-subtitle);
  margin-left: calc(var(--spacing) * 8);
}

.shiki {
  padding: calc(var(--spacing) * 4);
  border-radius: 12px;
  border: 2px dotted var(--color-secondary);
}

.spinner {
  width: calc(var(--spacing) * 8);
  height: calc(var(--spacing) * 8);
  border: 3px solid rgba(0, 0, 0, .2);
  border-top-color: var(--color-theme);
  border-radius: 50%;
  animation: spin .8s linear infinite;
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

footer {
  text-align: center;
  padding: calc(var(--spacing) * 4);
}

.italic {
  font-style: italic;
}

